# obs-plugins

./: README.md
doc-source/: CMakeLists.txt  CMakeLists.txt.bak  doc-source.c
drawing-source/: CMakeLists.txt  CMakeLists.txt.bak  drawing-source.cpp  drawing-source.h  source-manager.cpp  source-manager.h  zmath.c  zmath.h
